💄 dark mode fixes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 @responsive {
@@ -46,7 +47,7 @@ button {
   /* @apply bg-gray-200; */
 }
 .nuxt-link-active {
-  @apply text-gray-900 border-indigo-500;
+  @apply text-gray-900 border-indigo-500 dark:text-white;
 }
 
 .display-grid {
